--- a/src/main/resources/templates/transaction-out.html
+++ b/src/main/resources/templates/transaction-out.html
@@ -31,7 +31,7 @@
           <option
             th:each="barang : ${barangs}"
             th:value="${barang.kode}"
-            th:text="${barang.kode}"
+            th:text="${barang.kode} + ' - ' + ${barang.nama}"
           ></option>
         </select>
         <div
@@ -87,6 +87,11 @@
           class="alert alert-danger"
           th:if="${#fields.hasErrors('stok')}"
           th:errors="*{stok}"
+        ></div>
+        <div
+          class="alert alert-danger"
+          th:if="${errorMessage != null}"
+          th:text="${errorMessage}"
         ></div>
       </div>
       <div class="text-center mt-5">
